src/parser/parser.output
Terminales no usados en la gramática

    TK_CHOCO
    TK_FUNC_SYMBOL
    TK_STRING
    TK_BOOL
    TK_PARAM
    TK_ASSIGN
    TK_BEGIN
    TK_FROM
    TK_TO
    TK_UNION
    TK_INTERSEC


Gramática

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 decl_opt_cst decl_opt_fncs system_or_func

    3 $@2: ε

    4 program: $@2 choco_ctr

    5 system_or_func: TK_VARS decl_var_list ';' decl_opt_fncs decl_opt_goal decl_opt_ctrs
    6               | ε

    7 choco_ctr: ctr_blk_list

    8 decl_opt_cst: ε
    9             | TK_CONST
   10             | TK_CONST decl_cst_list ';'

   11 decl_cst_list: decl_cst
   12              | decl_cst_list ';' decl_cst

   13 decl_cst: TK_NEW_SYMBOL dimension equ_or_in expr
   14         | '*' TK_NEW_SYMBOL dimension equ_or_in expr

   15 equ_or_in: TK_EQU
   16          | TK_IN

   17 decl_var_list: decl_var
   18              | decl_var_list ';' decl_var
   19              | decl_var_list ',' decl_var

   20 decl_var: TK_NEW_SYMBOL dimension
   21         | TK_NEW_SYMBOL dimension TK_IN expr

   22 dimension: ε
   23          | '[' expr ']'
   24          | '[' expr ']' '[' expr ']'

   25 interval: '[' expr ',' expr ']'

   26 decl_opt_fncs: decl_opt_fncs function
   27              | ε

   28 $@3: ε

   29 function: TK_FUNCTION $@3 TK_NEW_SYMBOL '(' fnc_inpt_list ')' fnc_code TK_RETURN expr semicolon_opt TK_END

   30 semicolon_opt: ';'
   31              | ε

   32 fnc_inpt_list: fnc_inpt_list ',' fnc_input
   33              | fnc_input

   34 fnc_input: TK_NEW_SYMBOL dimension

   35 fnc_code: fnc_code fnc_assign ';'
   36         | ε

   37 fnc_assign: TK_NEW_SYMBOL TK_EQU expr
   38           | TK_CONSTANT TK_EQU expr

   39 decl_opt_goal: ε
   40              | TK_MINIMIZE expr semicolon_opt

   41 decl_opt_ctrs: ε

   42 $@4: ε

   43 decl_opt_ctrs: TK_CTRS $@4 ctr_blk_list TK_END
   44              | TK_CTRS semicolon_opt TK_END

   45 ctr_blk_list: ctr_blk_list1 semicolon_opt
   46             | ctr_blk_list2 semicolon_opt

   47 ctr_blk_list1: ctr_blk_list1 ';' ctr
   48              | ctr_blk_list2 semicolon_opt ctr
   49              | ctr

   50 ctr_blk_list2: ctr_blk_list1 ';' ctr_loop
   51              | ctr_blk_list2 semicolon_opt ctr_loop
   52              | ctr_loop

   53 $@5: ε

   54 ctr_loop: TK_FOR TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list TK_END

   55 ctr: expr TK_EQU expr
   56    | expr TK_LEQ expr
   57    | expr TK_GEQ expr
   58    | expr '<' expr
   59    | expr '>' expr
   60    | expr TK_IN expr
   61    | TK_INTEGER '(' expr ')'
   62    | '(' ctr ')'
   63    | TK_NEW_SYMBOL TK_EQU expr

   64 expr: expr '+' expr
   65     | expr '*' expr
   66     | expr '-' expr
   67     | expr '/' expr
   68     | TK_MAX '(' expr_row ')'
   69     | TK_MIN '(' expr_row ')'

   70 $@6: ε

   71 expr: TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   72     | TK_ATAN2 '(' expr ',' expr ')'
   73     | '-' expr
   74     | TK_ABS '(' expr ')'
   75     | TK_SIGN '(' expr ')'
   76     | expr '\''
   77     | TK_SQRT '(' expr ')'
   78     | TK_SQR '(' expr ')'
   79     | TK_POW '(' expr ',' expr ')'
   80     | TK_EXPO '(' expr ')'
   81     | TK_LOG '(' expr ')'
   82     | TK_COS '(' expr ')'
   83     | TK_SIN '(' expr ')'
   84     | TK_TAN '(' expr ')'
   85     | TK_ACOS '(' expr ')'
   86     | TK_ASIN '(' expr ')'
   87     | TK_ATAN '(' expr ')'
   88     | TK_COSH '(' expr ')'
   89     | TK_SINH '(' expr ')'
   90     | TK_TANH '(' expr ')'
   91     | TK_ACOSH '(' expr ')'
   92     | TK_ASINH '(' expr ')'
   93     | TK_ATANH '(' expr ')'
   94     | TK_FLOOR '(' expr ')'
   95     | TK_CEIL '(' expr ')'
   96     | TK_CHI '(' expr ',' expr ',' expr ')'
   97     | '+' expr
   98     | '(' expr ')'
   99     | '<' expr ',' expr '>'
  100     | expr '^' expr
  101     | expr '[' expr_index ']'
  102     | expr '(' expr_index ')'
  103     | expr '(' expr_index ',' expr_index ')'
  104     | '(' expr_row ')'
  105     | '(' expr_col ')'
  106     | TK_ENTITY
  107     | TK_ITERATOR
  108     | TK_EXPR_TMP_SYMBOL
  109     | TK_CONSTANT
  110     | TK_FLOAT
  111     | TK_PI
  112     | TK_INFINITY
  113     | TK_INT_CST
  114     | interval
  115     | TK_INF '(' expr ')'
  116     | TK_MID '(' expr ')'
  117     | TK_SUP '(' expr ')'
  118     | TK_DIFF '(' expr_row ')'
  119     | TK_UNARY_OP '(' expr ')'
  120     | TK_BINARY_OP '(' expr ',' expr ')'

  121 expr_row: expr_row ',' expr
  122         | expr ',' expr

  123 expr_col: expr_col ';' expr
  124         | expr ';' expr

  125 expr_index: ':'
  126           | expr
  127           | expr ':' expr


Terminales con las reglas donde aparecen

    $end (0) 0
    '\'' (39) 76
    '(' (40) 29 61 62 68 69 71 72 74 75 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 98 102 103 104 105 115 116 117 118 119 120
    ')' (41) 29 61 62 68 69 71 72 74 75 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 98 102 103 104 105 115 116 117 118 119 120
    '*' (42) 14 65
    '+' (43) 64 97
    ',' (44) 19 25 32 71 72 79 96 99 103 120 121 122
    '-' (45) 66 73
    '/' (47) 67
    ':' (58) 54 71 125 127
    ';' (59) 5 10 12 18 30 35 47 50 54 123 124
    '<' (60) 58 99
    '>' (62) 59 99
    '[' (91) 23 24 25 101
    ']' (93) 23 24 25 101
    '^' (94) 100
    error (256)
    TK_CHOCO (258)
    TK_CONSTANT <str> (259) 38 109
    TK_NEW_SYMBOL <str> (260) 13 14 20 21 29 34 37 54 63 71
    TK_FUNC_SYMBOL <str> (261)
    TK_EXPR_TMP_SYMBOL <str> (262) 108
    TK_ENTITY <str> (263) 106
    TK_ITERATOR <str> (264) 107
    TK_UNARY_OP <str> (265) 119
    TK_BINARY_OP <str> (266) 120
    TK_STRING <str> (267)
    TK_INT_CST <itg> (268) 113
    TK_FLOAT <real> (269) 110
    TK_PI (270) 111
    TK_INFINITY (271) 112
    TK_BOOL <_bool> (272)
    TK_PARAM (273)
    TK_CONST (274) 9 10
    TK_VARS (275) 5
    TK_FUNCTION (276) 29
    TK_DIFF (277) 118
    TK_MIN (278) 69
    TK_MAX (279) 68
    TK_INF (280) 115
    TK_MID (281) 116
    TK_SUP (282) 117
    TK_SIGN (283) 75
    TK_ABS (284) 74
    TK_SUM (285) 71
    TK_SQRT (286) 77
    TK_SQR (287) 78
    TK_POW (288) 79
    TK_EXPO (289) 80
    TK_LOG (290) 81
    TK_COS (291) 82
    TK_SIN (292) 83
    TK_TAN (293) 84
    TK_ACOS (294) 85
    TK_ASIN (295) 86
    TK_ATAN (296) 87
    TK_ATAN2 (297) 72
    TK_COSH (298) 88
    TK_SINH (299) 89
    TK_TANH (300) 90
    TK_ACOSH (301) 91
    TK_ASINH (302) 92
    TK_ATANH (303) 93
    TK_FLOOR (304) 94
    TK_CEIL (305) 95
    TK_INTEGER (306) 61
    TK_LEQ (307) 56
    TK_GEQ (308) 57
    TK_EQU (309) 15 37 38 54 55 63 71
    TK_ASSIGN (310)
    TK_CHI (311) 96
    TK_BEGIN (312)
    TK_END (313) 29 43 44 54
    TK_FOR (314) 54
    TK_FROM (315)
    TK_TO (316)
    TK_RETURN (317) 29
    TK_CTRS (318) 43 44
    TK_MINIMIZE (319) 40
    TK_IN (320) 16 21 60
    TK_UNION (321)
    TK_INTERSEC (322)


No terminales con las reglas donde aparecen

    $accept (83)
        on left: 0
    program (84)
        on left: 2 4
        on right: 0
    $@1 (85)
        on left: 1
        on right: 2
    $@2 (86)
        on left: 3
        on right: 4
    system_or_func (87)
        on left: 5 6
        on right: 2
    choco_ctr (88)
        on left: 7
        on right: 4
    decl_opt_cst (89)
        on left: 8 9 10
        on right: 2
    decl_cst_list (90)
        on left: 11 12
        on right: 10 12
    decl_cst (91)
        on left: 13 14
        on right: 11 12
    equ_or_in (92)
        on left: 15 16
        on right: 13 14
    decl_var_list (93)
        on left: 17 18 19
        on right: 5 18 19
    decl_var (94)
        on left: 20 21
        on right: 17 18 19
    dimension <dim> (95)
        on left: 22 23 24
        on right: 13 14 20 21 34
    interval <itv> (96)
        on left: 25
        on right: 114
    decl_opt_fncs (97)
        on left: 26 27
        on right: 2 5 26
    function (98)
        on left: 29
        on right: 26
    $@3 (99)
        on left: 28
        on right: 29
    semicolon_opt (100)
        on left: 30 31
        on right: 29 40 44 45 46 48 51
    fnc_inpt_list (101)
        on left: 32 33
        on right: 29 32
    fnc_input (102)
        on left: 34
        on right: 32 33
    fnc_code (103)
        on left: 35 36
        on right: 29 35
    fnc_assign (104)
        on left: 37 38
        on right: 35
    decl_opt_goal (105)
        on left: 39 40
        on right: 5
    decl_opt_ctrs (106)
        on left: 41 43 44
        on right: 5
    $@4 (107)
        on left: 42
        on right: 43
    ctr_blk_list <constraints> (108)
        on left: 45 46
        on right: 7 43 54
    ctr_blk_list1 <constraints> (109)
        on left: 47 48 49
        on right: 45 47 50
    ctr_blk_list2 <constraints> (110)
        on left: 50 51 52
        on right: 46 48 51
    ctr_loop <constraint> (111)
        on left: 54
        on right: 50 51 52
    $@5 (112)
        on left: 53
        on right: 54
    ctr <constraint> (113)
        on left: 55 56 57 58 59 60 61 62 63
        on right: 47 48 49 62
    expr <expression> (114)
        on left: 64 65 66 67 68 69 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120
        on right: 13 14 21 23 24 25 29 37 38 40 54 55 56 57 58 59 60 61 63 64 65 66 67 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 115 116 117 119 120 121 122 123 124 126 127
    $@6 (115)
        on left: 70
        on right: 71
    expr_row <expressions> (116)
        on left: 121 122
        on right: 68 69 104 118 121
    expr_col <expressions> (117)
        on left: 123 124
        on right: 105 123
    expr_index <expression> (118)
        on left: 125 126 127
        on right: 101 102 103


Estado 0

    0 $accept: • program $end
    1 $@1: ε •  [$end, TK_CONST, TK_VARS, TK_FUNCTION]
    2 program: • $@1 decl_opt_cst decl_opt_fncs system_or_func
    3 $@2: ε •  [TK_CONSTANT, TK_NEW_SYMBOL, TK_EXPR_TMP_SYMBOL, TK_ENTITY, TK_ITERATOR, TK_UNARY_OP, TK_BINARY_OP, TK_INT_CST, TK_FLOAT, TK_PI, TK_INFINITY, TK_DIFF, TK_MIN, TK_MAX, TK_INF, TK_MID, TK_SUP, TK_SIGN, TK_ABS, TK_SUM, TK_SQRT, TK_SQR, TK_POW, TK_EXPO, TK_LOG, TK_COS, TK_SIN, TK_TAN, TK_ACOS, TK_ASIN, TK_ATAN, TK_ATAN2, TK_COSH, TK_SINH, TK_TANH, TK_ACOSH, TK_ASINH, TK_ATANH, TK_FLOOR, TK_CEIL, TK_INTEGER, TK_CHI, TK_FOR, '<', '+', '-', '[', '(']
    4 program: • $@2 choco_ctr

    $end         reduce usando la regla 1 ($@1)
    TK_CONST     reduce usando la regla 1 ($@1)
    TK_VARS      reduce usando la regla 1 ($@1)
    TK_FUNCTION  reduce usando la regla 1 ($@1)
    $default     reduce usando la regla 3 ($@2)

    program  ir al estado 1
    $@1      ir al estado 2
    $@2      ir al estado 3


Estado 1

    0 $accept: program • $end

    $end  desplazar e ir al estado 4


Estado 2

    2 program: $@1 • decl_opt_cst decl_opt_fncs system_or_func
    8 decl_opt_cst: ε •  [$end, TK_VARS, TK_FUNCTION]
    9             | • TK_CONST
   10             | • TK_CONST decl_cst_list ';'

    TK_CONST  desplazar e ir al estado 5

    $default  reduce usando la regla 8 (decl_opt_cst)

    decl_opt_cst  ir al estado 6


Estado 3

    4 program: $@2 • choco_ctr
    7 choco_ctr: • ctr_blk_list
   25 interval: • '[' expr ',' expr ']'
   45 ctr_blk_list: • ctr_blk_list1 semicolon_opt
   46             | • ctr_blk_list2 semicolon_opt
   47 ctr_blk_list1: • ctr_blk_list1 ';' ctr
   48              | • ctr_blk_list2 semicolon_opt ctr
   49              | • ctr
   50 ctr_blk_list2: • ctr_blk_list1 ';' ctr_loop
   51              | • ctr_blk_list2 semicolon_opt ctr_loop
   52              | • ctr_loop
   54 ctr_loop: • TK_FOR TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list TK_END
   55 ctr: • expr TK_EQU expr
   56    | • expr TK_LEQ expr
   57    | • expr TK_GEQ expr
   58    | • expr '<' expr
   59    | • expr '>' expr
   60    | • expr TK_IN expr
   61    | • TK_INTEGER '(' expr ')'
   62    | • '(' ctr ')'
   63    | • TK_NEW_SYMBOL TK_EQU expr
   64 expr: • expr '+' expr
   65     | • expr '*' expr
   66     | • expr '-' expr
   67     | • expr '/' expr
   68     | • TK_MAX '(' expr_row ')'
   69     | • TK_MIN '(' expr_row ')'
   71     | • TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   72     | • TK_ATAN2 '(' expr ',' expr ')'
   73     | • '-' expr
   74     | • TK_ABS '(' expr ')'
   75     | • TK_SIGN '(' expr ')'
   76     | • expr '\''
   77     | • TK_SQRT '(' expr ')'
   78     | • TK_SQR '(' expr ')'
   79     | • TK_POW '(' expr ',' expr ')'
   80     | • TK_EXPO '(' expr ')'
   81     | • TK_LOG '(' expr ')'
   82     | • TK_COS '(' expr ')'
   83     | • TK_SIN '(' expr ')'
   84     | • TK_TAN '(' expr ')'
   85     | • TK_ACOS '(' expr ')'
   86     | • TK_ASIN '(' expr ')'
   87     | • TK_ATAN '(' expr ')'
   88     | • TK_COSH '(' expr ')'
   89     | • TK_SINH '(' expr ')'
   90     | • TK_TANH '(' expr ')'
   91     | • TK_ACOSH '(' expr ')'
   92     | • TK_ASINH '(' expr ')'
   93     | • TK_ATANH '(' expr ')'
   94     | • TK_FLOOR '(' expr ')'
   95     | • TK_CEIL '(' expr ')'
   96     | • TK_CHI '(' expr ',' expr ',' expr ')'
   97     | • '+' expr
   98     | • '(' expr ')'
   99     | • '<' expr ',' expr '>'
  100     | • expr '^' expr
  101     | • expr '[' expr_index ']'
  102     | • expr '(' expr_index ')'
  103     | • expr '(' expr_index ',' expr_index ')'
  104     | • '(' expr_row ')'
  105     | • '(' expr_col ')'
  106     | • TK_ENTITY
  107     | • TK_ITERATOR
  108     | • TK_EXPR_TMP_SYMBOL
  109     | • TK_CONSTANT
  110     | • TK_FLOAT
  111     | • TK_PI
  112     | • TK_INFINITY
  113     | • TK_INT_CST
  114     | • interval
  115     | • TK_INF '(' expr ')'
  116     | • TK_MID '(' expr ')'
  117     | • TK_SUP '(' expr ')'
  118     | • TK_DIFF '(' expr_row ')'
  119     | • TK_UNARY_OP '(' expr ')'
  120     | • TK_BINARY_OP '(' expr ',' expr ')'

    TK_CONSTANT         desplazar e ir al estado 7
    TK_NEW_SYMBOL       desplazar e ir al estado 8
    TK_EXPR_TMP_SYMBOL  desplazar e ir al estado 9
    TK_ENTITY           desplazar e ir al estado 10
    TK_ITERATOR         desplazar e ir al estado 11
    TK_UNARY_OP         desplazar e ir al estado 12
    TK_BINARY_OP        desplazar e ir al estado 13
    TK_INT_CST          desplazar e ir al estado 14
    TK_FLOAT            desplazar e ir al estado 15
    TK_PI               desplazar e ir al estado 16
    TK_INFINITY         desplazar e ir al estado 17
    TK_DIFF             desplazar e ir al estado 18
    TK_MIN              desplazar e ir al estado 19
    TK_MAX              desplazar e ir al estado 20
    TK_INF              desplazar e ir al estado 21
    TK_MID              desplazar e ir al estado 22
    TK_SUP              desplazar e ir al estado 23
    TK_SIGN             desplazar e ir al estado 24
    TK_ABS              desplazar e ir al estado 25
    TK_SUM              desplazar e ir al estado 26
    TK_SQRT             desplazar e ir al estado 27
    TK_SQR              desplazar e ir al estado 28
    TK_POW              desplazar e ir al estado 29
    TK_EXPO             desplazar e ir al estado 30
    TK_LOG              desplazar e ir al estado 31
    TK_COS              desplazar e ir al estado 32
    TK_SIN              desplazar e ir al estado 33
    TK_TAN              desplazar e ir al estado 34
    TK_ACOS             desplazar e ir al estado 35
    TK_ASIN             desplazar e ir al estado 36
    TK_ATAN             desplazar e ir al estado 37
    TK_ATAN2            desplazar e ir al estado 38
    TK_COSH             desplazar e ir al estado 39
    TK_SINH             desplazar e ir al estado 40
    TK_TANH             desplazar e ir al estado 41
    TK_ACOSH            desplazar e ir al estado 42
    TK_ASINH            desplazar e ir al estado 43
    TK_ATANH            desplazar e ir al estado 44
    TK_FLOOR            desplazar e ir al estado 45
    TK_CEIL             desplazar e ir al estado 46
    TK_INTEGER          desplazar e ir al estado 47
    TK_CHI              desplazar e ir al estado 48
    TK_FOR              desplazar e ir al estado 49
    '<'                 desplazar e ir al estado 50
    '+'                 desplazar e ir al estado 51
    '-'                 desplazar e ir al estado 52
    '['                 desplazar e ir al estado 53
    '('                 desplazar e ir al estado 54

    choco_ctr      ir al estado 55
    interval       ir al estado 56
    ctr_blk_list   ir al estado 57
    ctr_blk_list1  ir al estado 58
    ctr_blk_list2  ir al estado 59
    ctr_loop       ir al estado 60
    ctr            ir al estado 61
    expr           ir al estado 62


Estado 4

    0 $accept: program $end •

    $default  aceptar


Estado 5

    9 decl_opt_cst: TK_CONST •  [$end, TK_VARS, TK_FUNCTION]
   10             | TK_CONST • decl_cst_list ';'
   11 decl_cst_list: • decl_cst
   12              | • decl_cst_list ';' decl_cst
   13 decl_cst: • TK_NEW_SYMBOL dimension equ_or_in expr
   14         | • '*' TK_NEW_SYMBOL dimension equ_or_in expr

    TK_NEW_SYMBOL  desplazar e ir al estado 63
    '*'            desplazar e ir al estado 64

    $default  reduce usando la regla 9 (decl_opt_cst)

    decl_cst_list  ir al estado 65
    decl_cst       ir al estado 66


Estado 6

    2 program: $@1 decl_opt_cst • decl_opt_fncs system_or_func
   26 decl_opt_fncs: • decl_opt_fncs function
   27              | ε •

    $default  reduce usando la regla 27 (decl_opt_fncs)

    decl_opt_fncs  ir al estado 67


Estado 7

  109 expr: TK_CONSTANT •

    $default  reduce usando la regla 109 (expr)


Estado 8

   63 ctr: TK_NEW_SYMBOL • TK_EQU expr

    TK_EQU  desplazar e ir al estado 68


Estado 9

  108 expr: TK_EXPR_TMP_SYMBOL •

    $default  reduce usando la regla 108 (expr)


Estado 10

  106 expr: TK_ENTITY •

    $default  reduce usando la regla 106 (expr)


Estado 11

  107 expr: TK_ITERATOR •

    $default  reduce usando la regla 107 (expr)


Estado 12

  119 expr: TK_UNARY_OP • '(' expr ')'

    '('  desplazar e ir al estado 69


Estado 13

  120 expr: TK_BINARY_OP • '(' expr ',' expr ')'

    '('  desplazar e ir al estado 70


Estado 14

  113 expr: TK_INT_CST •

    $default  reduce usando la regla 113 (expr)


Estado 15

  110 expr: TK_FLOAT •

    $default  reduce usando la regla 110 (expr)


Estado 16

  111 expr: TK_PI •

    $default  reduce usando la regla 111 (expr)


Estado 17

  112 expr: TK_INFINITY •

    $default  reduce usando la regla 112 (expr)


Estado 18

  118 expr: TK_DIFF • '(' expr_row ')'

    '('  desplazar e ir al estado 71


Estado 19

   69 expr: TK_MIN • '(' expr_row ')'

    '('  desplazar e ir al estado 72


Estado 20

   68 expr: TK_MAX • '(' expr_row ')'

    '('  desplazar e ir al estado 73


Estado 21

  115 expr: TK_INF • '(' expr ')'

    '('  desplazar e ir al estado 74


Estado 22

  116 expr: TK_MID • '(' expr ')'

    '('  desplazar e ir al estado 75


Estado 23

  117 expr: TK_SUP • '(' expr ')'

    '('  desplazar e ir al estado 76


Estado 24

   75 expr: TK_SIGN • '(' expr ')'

    '('  desplazar e ir al estado 77


Estado 25

   74 expr: TK_ABS • '(' expr ')'

    '('  desplazar e ir al estado 78


Estado 26

   71 expr: TK_SUM • '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'

    '('  desplazar e ir al estado 79


Estado 27

   77 expr: TK_SQRT • '(' expr ')'

    '('  desplazar e ir al estado 80


Estado 28

   78 expr: TK_SQR • '(' expr ')'

    '('  desplazar e ir al estado 81


Estado 29

   79 expr: TK_POW • '(' expr ',' expr ')'

    '('  desplazar e ir al estado 82


Estado 30

   80 expr: TK_EXPO • '(' expr ')'

    '('  desplazar e ir al estado 83


Estado 31

   81 expr: TK_LOG • '(' expr ')'

    '('  desplazar e ir al estado 84


Estado 32

   82 expr: TK_COS • '(' expr ')'

    '('  desplazar e ir al estado 85


Estado 33

   83 expr: TK_SIN • '(' expr ')'

    '('  desplazar e ir al estado 86


Estado 34

   84 expr: TK_TAN • '(' expr ')'

    '('  desplazar e ir al estado 87


Estado 35

   85 expr: TK_ACOS • '(' expr ')'

    '('  desplazar e ir al estado 88


Estado 36

   86 expr: TK_ASIN • '(' expr ')'

    '('  desplazar e ir al estado 89


Estado 37

   87 expr: TK_ATAN • '(' expr ')'

    '('  desplazar e ir al estado 90


Estado 38

   72 expr: TK_ATAN2 • '(' expr ',' expr ')'

    '('  desplazar e ir al estado 91


Estado 39

   88 expr: TK_COSH • '(' expr ')'

    '('  desplazar e ir al estado 92


Estado 40

   89 expr: TK_SINH • '(' expr ')'

    '('  desplazar e ir al estado 93


Estado 41

   90 expr: TK_TANH • '(' expr ')'

    '('  desplazar e ir al estado 94


Estado 42

   91 expr: TK_ACOSH • '(' expr ')'

    '('  desplazar e ir al estado 95


Estado 43

   92 expr: TK_ASINH • '(' expr ')'

    '('  desplazar e ir al estado 96


Estado 44

   93 expr: TK_ATANH • '(' expr ')'

    '('  desplazar e ir al estado 97


Estado 45

   94 expr: TK_FLOOR • '(' expr ')'

    '('  desplazar e ir al estado 98


Estado 46

   95 expr: TK_CEIL • '(' expr ')'

    '('  desplazar e ir al estado 99


Estado 47

   61 ctr: TK_INTEGER • '(' expr ')'

    '('  desplazar e ir al estado 100


Estado 48

   96 expr: TK_CHI • '(' expr ',' expr ',' expr ')'

    '('  desplazar e ir al estado 101


Estado 49

   54 ctr_loop: TK_FOR • TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list TK_END

    TK_NEW_SYMBOL  desplazar e ir al estado 102


Estado 50

   25 interval: • '[' expr ',' expr ']'
   64 expr: • expr '+' expr
   65     | • expr '*' expr
   66     | • expr '-' expr
   67     | • expr '/' expr
   68     | • TK_MAX '(' expr_row ')'
   69     | • TK_MIN '(' expr_row ')'
   71     | • TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   72     | • TK_ATAN2 '(' expr ',' expr ')'
   73     | • '-' expr
   74     | • TK_ABS '(' expr ')'
   75     | • TK_SIGN '(' expr ')'
   76     | • expr '\''
   77     | • TK_SQRT '(' expr ')'
   78     | • TK_SQR '(' expr ')'
   79     | • TK_POW '(' expr ',' expr ')'
   80     | • TK_EXPO '(' expr ')'
   81     | • TK_LOG '(' expr ')'
   82     | • TK_COS '(' expr ')'
   83     | • TK_SIN '(' expr ')'
   84     | • TK_TAN '(' expr ')'
   85     | • TK_ACOS '(' expr ')'
   86     | • TK_ASIN '(' expr ')'
   87     | • TK_ATAN '(' expr ')'
   88     | • TK_COSH '(' expr ')'
   89     | • TK_SINH '(' expr ')'
   90     | • TK_TANH '(' expr ')'
   91     | • TK_ACOSH '(' expr ')'
   92     | • TK_ASINH '(' expr ')'
   93     | • TK_ATANH '(' expr ')'
   94     | • TK_FLOOR '(' expr ')'
   95     | • TK_CEIL '(' expr ')'
   96     | • TK_CHI '(' expr ',' expr ',' expr ')'
   97     | • '+' expr
   98     | • '(' expr ')'
   99     | • '<' expr ',' expr '>'
   99     | '<' • expr ',' expr '>'
  100     | • expr '^' expr
  101     | • expr '[' expr_index ']'
  102     | • expr '(' expr_index ')'
  103     | • expr '(' expr_index ',' expr_index ')'
  104     | • '(' expr_row ')'
  105     | • '(' expr_col ')'
  106     | • TK_ENTITY
  107     | • TK_ITERATOR
  108     | • TK_EXPR_TMP_SYMBOL
  109     | • TK_CONSTANT
  110     | • TK_FLOAT
  111     | • TK_PI
  112     | • TK_INFINITY
  113     | • TK_INT_CST
  114     | • interval
  115     | • TK_INF '(' expr ')'
  116     | • TK_MID '(' expr ')'
  117     | • TK_SUP '(' expr ')'
  118     | • TK_DIFF '(' expr_row ')'
  119     | • TK_UNARY_OP '(' expr ')'
  120     | • TK_BINARY_OP '(' expr ',' expr ')'

    TK_CONSTANT         desplazar e ir al estado 7
    TK_EXPR_TMP_SYMBOL  desplazar e ir al estado 9
    TK_ENTITY           desplazar e ir al estado 10
    TK_ITERATOR         desplazar e ir al estado 11
    TK_UNARY_OP         desplazar e ir al estado 12
    TK_BINARY_OP        desplazar e ir al estado 13
    TK_INT_CST          desplazar e ir al estado 14
    TK_FLOAT            desplazar e ir al estado 15
    TK_PI               desplazar e ir al estado 16
    TK_INFINITY         desplazar e ir al estado 17
    TK_DIFF             desplazar e ir al estado 18
    TK_MIN              desplazar e ir al estado 19
    TK_MAX              desplazar e ir al estado 20
    TK_INF              desplazar e ir al estado 21
    TK_MID              desplazar e ir al estado 22
    TK_SUP              desplazar e ir al estado 23
    TK_SIGN             desplazar e ir al estado 24
    TK_ABS              desplazar e ir al estado 25
    TK_SUM              desplazar e ir al estado 26
    TK_SQRT             desplazar e ir al estado 27
    TK_SQR              desplazar e ir al estado 28
    TK_POW              desplazar e ir al estado 29
    TK_EXPO             desplazar e ir al estado 30
    TK_LOG              desplazar e ir al estado 31
    TK_COS              desplazar e ir al estado 32
    TK_SIN              desplazar e ir al estado 33
    TK_TAN              desplazar e ir al estado 34
    TK_ACOS             desplazar e ir al estado 35
    TK_ASIN             desplazar e ir al estado 36
    TK_ATAN             desplazar e ir al estado 37
    TK_ATAN2            desplazar e ir al estado 38
    TK_COSH             desplazar e ir al estado 39
    TK_SINH             desplazar e ir al estado 40
    TK_TANH             desplazar e ir al estado 41
    TK_ACOSH            desplazar e ir al estado 42
    TK_ASINH            desplazar e ir al estado 43
    TK_ATANH            desplazar e ir al estado 44
    TK_FLOOR            desplazar e ir al estado 45
    TK_CEIL             desplazar e ir al estado 46
    TK_CHI              desplazar e ir al estado 48
    '<'                 desplazar e ir al estado 50
    '+'                 desplazar e ir al estado 51
    '-'                 desplazar e ir al estado 52
    '['                 desplazar e ir al estado 53
    '('                 desplazar e ir al estado 103

    interval  ir al estado 56
    expr      ir al estado 104


Estado 51

   25 interval: • '[' expr ',' expr ']'
   64 expr: • expr '+' expr
   65     | • expr '*' expr
   66     | • expr '-' expr
   67     | • expr '/' expr
   68     | • TK_MAX '(' expr_row ')'
   69     | • TK_MIN '(' expr_row ')'
   71     | • TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   72     | • TK_ATAN2 '(' expr ',' expr ')'
   73     | • '-' expr
   74     | • TK_ABS '(' expr ')'
   75     | • TK_SIGN '(' expr ')'
   76     | • expr '\''
   77     | • TK_SQRT '(' expr ')'
   78     | • TK_SQR '(' expr ')'
   79     | • TK_POW '(' expr ',' expr ')'
   80     | • TK_EXPO '(' expr ')'
   81     | • TK_LOG '(' expr ')'
   82     | • TK_COS '(' expr ')'
   83     | • TK_SIN '(' expr ')'
   84     | • TK_TAN '(' expr ')'
   85     | • TK_ACOS '(' expr ')'
   86     | • TK_ASIN '(' expr ')'
   87     | • TK_ATAN '(' expr ')'
   88     | • TK_COSH '(' expr ')'
   89     | • TK_SINH '(' expr ')'
   90     | • TK_TANH '(' expr ')'
   91     | • TK_ACOSH '(' expr ')'
   92     | • TK_ASINH '(' expr ')'
   93     | • TK_ATANH '(' expr ')'
   94     | • TK_FLOOR '(' expr ')'
   95     | • TK_CEIL '(' expr ')'
   96     | • TK_CHI '(' expr ',' expr ',' expr ')'
   97     | • '+' expr
   97     | '+' • expr
   98     | • '(' expr ')'
   99     | • '<' expr ',' expr '>'
  100     | • expr '^' expr
  101     | • expr '[' expr_index ']'
  102     | • expr '(' expr_index ')'
  103     | • expr '(' expr_index ',' expr_index ')'
  104     | • '(' expr_row ')'
  105     | • '(' expr_col ')'
  106     | • TK_ENTITY
  107     | • TK_ITERATOR
  108     | • TK_EXPR_TMP_SYMBOL
  109     | • TK_CONSTANT
  110     | • TK_FLOAT
  111     | • TK_PI
  112     | • TK_INFINITY
  113     | • TK_INT_CST
  114     | • interval
  115     | • TK_INF '(' expr ')'
  116     | • TK_MID '(' expr ')'
  117     | • TK_SUP '(' expr ')'
  118     | • TK_DIFF '(' expr_row ')'
  119     | • TK_UNARY_OP '(' expr ')'
  120     | • TK_BINARY_OP '(' expr ',' expr ')'
